http-https/ossm/bookinfo/dr-sleep-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sleep-egress-http
spec:
  host: default-egress.istio-system.svc.cluster.local
  subsets:
  - name: nginx-mtls-http
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
        sni: nginx.apps.myocp4.afe4.sandbox549.opentlc.com
